<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arduclip Remote</string>
    <string name="action_settings">Settings</string>
    <string name="command_hint">Manual commands go here…</string>
    <string name="ip_hint">hostname[:port]</string>
    <string name="port_hint">Port</string>
    <string name="send_button_text">Send</string>
    <string name="connect_button_text">Connect</string>
    <string name="disconnect_button_text">Disconnect</string>
    <string name="input_stream_welcome_text">Server Status</string>

</resources>
