<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"  >

    <EditText
        android:id="@+id/EditTextCommand"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/command_hint" >
    </EditText>

    <EditText
        android:id="@+id/EditTextIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/EditTextCommand"
        android:ems="10"
        android:hint="@string/ip_hint" />

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/EditTextIp"
        android:layout_toRightOf="@+id/connectButton"
        android:onClick="onClickDisconnect"
        android:text="@string/disconnect_button_text" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/disconnectButton"
        android:layout_below="@+id/EditTextIp"
        android:layout_centerHorizontal="true"
        android:onClick="onClickConnect"
        android:text="@string/connect_button_text" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/connectButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/EditTextIp"
        android:layout_toLeftOf="@+id/connectButton"
        android:onClick="onClickSend"
        android:text="@string/send_button_text" />

    <TextView
        android:id="@+id/statusStreamTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:gravity="bottom"
        android:padding="15dip"
        android:scrollbars="vertical"
        android:text="@string/input_stream_welcome_text"
        android:layout_below="@+id/btnRew"
        />

    <TextView
        android:id="@+id/inputStreamTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border"
        android:gravity="bottom"
        android:padding="15dip"
        android:scrollbars="vertical"
        android:text="@string/input_stream_welcome_text" android:layout_toRightOf="@+id/connectButton"
        android:layout_below="@+id/btnRew" />

    <Button
        android:id="@+id/btnFwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectButton"
        android:layout_toLeftOf="@+id/inputStreamTextView"
        android:layout_toStartOf="@+id/inputStreamTextView"
        android:onClick="btnFwd"
        android:text="Fwd" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFwd"
        android:layout_toRightOf="@+id/sendButton"
        android:onClick="btnStop"
        android:text="Stop" />

    <Button
        android:id="@+id/btnRew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStop"
        android:layout_toRightOf="@+id/sendButton"
        android:onClick="btnRew"
        android:text="Rew" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFwd"
        android:layout_toLeftOf="@+id/btnStop"
        android:onClick="btnLeft"
        android:text="L" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFwd"
        android:layout_toRightOf="@+id/btnStop"
        android:onClick="btnRight"
        android:text="R" />

    <Switch
        android:id="@+id/swCutter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cutter"
        android:layout_alignBaseline="@+id/btnFwd"
        android:layout_alignBottom="@+id/btnFwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp" />

</RelativeLayout>